--- a/Task1_TSF.ipynb
+++ b/Task1_TSF.ipynb
@@ -34,10 +34,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e70c627",
+   "id": "34851da3",
    "metadata": {},
    "source": [
-    "## Predict the percentage of an student based on number of study hours"
+    "datasetlink:http://bit.ly/w-data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d46cf1fb",
+   "metadata": {},
+   "source": [
+    "## Predict the percentage of a student based on the number of study hours"
    ]
   },
   {
@@ -45,17 +53,17 @@
    "id": "7eb10f02",
    "metadata": {},
    "source": [
-    "## Author:KEERTHANA S K"
+    "## Name:KEERTHANA S K"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 166,
    "id": "14923ccf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# importing all the rquired libraries:\n",
+    "# importing the required libraries to performing the task:\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -68,19 +76,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 169,
    "id": "0df8e53b",
    "metadata": {},
    "outputs": [],
    "source": [
     "df=pd.read_csv(\"dataset_for_task1\")\n",
+    "\n",
     "df= df.drop(df.columns[0], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "cc37d1d7",
+   "execution_count": 170,
+   "id": "0c353358",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +156,7 @@
        "4    3.5      30"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7e8011bc",
+   "id": "11932320",
    "metadata": {},
    "outputs": [
     {
@@ -237,8 +246,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "4b853051",
+   "execution_count": 27,
+   "id": "6790e644",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +256,7 @@
        "Text(0, 0.5, 'Percentage Score')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -273,16 +282,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06abc48d",
+   "id": "5db43fc2",
    "metadata": {},
    "source": [
-    "### Preparing the data"
+    "### Build machine learning models\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "49f74f2b",
+   "execution_count": 28,
+   "id": "30276e8a",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +324,7 @@
        "       [7.8]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,8 +337,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "3642c96a",
+   "execution_count": 35,
+   "id": "bfa7c281",
    "metadata": {},
    "outputs": [
     {
@@ -339,19 +348,19 @@
        "       24, 67, 69, 30, 54, 35, 76, 86], dtype=int64)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_independent=df.iloc[:, 1].values  \n",
-    "y_independent"
+    "y_dependent=df.iloc[:, 1].values  \n",
+    "y_dependent"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8c4e684b",
+   "id": "c57e530d",
    "metadata": {},
    "source": [
     "### split this data into training and tests data"
@@ -359,8 +368,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "5124b64d",
+   "execution_count": 36,
+   "id": "a8644c16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,17 +379,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bf0d9ab",
+   "id": "486f3e3e",
    "metadata": {},
    "source": [
-    "### Build machine learning models\n",
-    "### Since the requirement is to do the task in supervised ML ,we can use regression model.\n"
+    "\n",
+    "### The requirement is to do the task in supervised ML ,we can use regression model.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "451cfa0c",
+   "execution_count": 37,
+   "id": "4e5a855a",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6354c474",
+   "id": "ff9573c0",
    "metadata": {},
    "source": [
     "### Equation of the  regression line"
@@ -407,8 +416,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "c97ebbaa",
+   "execution_count": 171,
+   "id": "6b78de17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,8 +426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "a2bfcc3b",
+   "execution_count": 172,
+   "id": "7896ae1e",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +436,7 @@
        "array([9.91065648])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,8 +447,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "437f3ba9",
+   "execution_count": 173,
+   "id": "e8b65a47",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +481,7 @@
        "       [7.8]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,8 +492,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "2293b7dc",
+   "execution_count": 41,
+   "id": "fe91cb69",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +502,7 @@
        "2.018160041434683"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "639a659c",
+   "id": "428a9882",
    "metadata": {},
    "source": [
     "### plotting the regression line"
@@ -512,17 +521,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "20803221",
+   "execution_count": 42,
+   "id": "2ce58870",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2324c38d7c0>"
+       "<matplotlib.collections.PathCollection at 0x1f54e40dd60>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -547,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "516a0559",
+   "id": "527af387",
    "metadata": {},
    "source": [
     "### Make Prediction of percentage marks for required study hours."
@@ -555,8 +564,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "92088c83",
+   "execution_count": 43,
+   "id": "ccdecf04",
    "metadata": {},
    "outputs": [
     {
@@ -577,8 +586,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8750f27e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([16.88414476, 33.73226078, 75.357018  , 26.79480124, 60.49103328])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "c178149d",
+   "id": "4f4efc47",
    "metadata": {},
    "source": [
     "### comparing actual scores with predicted scores"
@@ -587,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "ac9271de",
+   "id": "f5a2829f",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f7b83e4",
+   "id": "db1298e1",
    "metadata": {},
    "source": [
     "### calculating the percentage of a student who studied 9.25 hours"
@@ -675,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "db0cc09c",
+   "id": "638232e2",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "193b502f",
+   "id": "37388a10",
    "metadata": {},
    "source": [
     "### Evaluating the model"
@@ -705,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "8ab86b62",
+   "id": "70c078bc",
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85d17603",
+   "id": "994f3822",
    "metadata": {},
    "outputs": [],
    "source": []
